[package]
authors = ["taroosg <root@taroosg.dev>"]
edition = "2018"
name = "web-memory"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14.7", features = ["full"]}
rusqlite = {version = "0.25.3", features = ["uuid"]}
serde = {version = "1.0.126", features = ["derive"]}
serde_urlencoded = {version = "0.7.0"}
tera = "1.10.0"
tokio = {version = "1.6.0", features = ["macros", "rt-multi-thread"]}
uuid = {version = "0.8.2", features = ["v4", "serde"]}
